k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-api
  labels:
    app: video-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-api
  template:
    metadata:
      labels:
        app: video-api
    spec:
      serviceAccountName: video-api-sa
      containers:
      - name: video-api
        image: 783545975704.dkr.ecr.us-east-1.amazonaws.com/video-api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: video-api-service
spec:
  selector:
    app: video-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
