k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Rotas para o serviço de Pedidos
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: video-api-service
            port:
              number: 80
      - path: /download
        pathType: Prefix
        backend:
          service:
            name: video-api-service
            port:
              number: 80
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: video-api-service
            port:
              number: 80
